--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,10 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_questions">QuestionsActivity</string>
+    <string name="questioninfo">Question Information</string>
+    <string name="question_content">Questions Contents</string>
+    <string name="see_all_answers">See All Answers</string>
+    <string name="accepted_answer">Accepted Answer</string>
+    <string name="accepted_answer_contents">Accepted Answer Contents</string>
 
 </resources>
