--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_questions">QuestionsActivity</string>
+    <string name="title_activity_user">UserActivity</string>
+    <string name="title_activity_user_list">UserListActivity</string>
 
 </resources>
