Created the activity for the list of comments to a post. Divided question info and its answer in two tabs. Tag cloud improved(we can move through the graph)

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -29,5 +29,8 @@
     <string name="title_activity_answer_item">Answer_item</string>
     <string name="multiTagHint">Search for tags</string>
     <string name="singelUserHint">Search for a user</string>
+    <string name="title_activity_question_item_tab">QuestionItemTab</string>
+    <string name="title_activity_answers">AnswersActivity</string>
+    <string name="title_activity_comments">CommentsActivity</string>
 
 </resources>
