--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -40,6 +40,7 @@
     <string name="title_activity_profile_posts">ProfilePostsActivity</string>
     <string name="menu_edit_question">Edit question</string>
     <string name="menu_remove_question">Remove question</string>
+    <string name="heat">HEAT</string>
     
 
 </resources>
